# nablafx

./: .gitignore  CALLBACK_SYSTEM_COMPLETE.md  INSTALL.md  MANIFEST.in  MIGRATION_COMPLETE.md  MIGRATION_SUMMARY.md  PYPI_INSTALL.md  PYPI_SETUP_SUMMARY.md  README.md  UPDATES.md  pyproject.toml  test_final_script.py  test_imports.py
backups/: README.md
backups/config-files/: model_bb-param_s4-f-b4-s4-c16.yaml.backup  model_bb-param_s4-f-b8-s32-c16.yaml.backup  model_bb-param_s4-tf-b4-s4-c16.yaml.backup  model_bb-param_s4-tf-b8-s32-c16.yaml.backup  model_bb-param_s4-ttf-b8-s32-c16.yaml.backup  model_bb-param_s4-tvf-b8-s32-c16.yaml.backup  model_bb-param_tcn-f-45-l-16.yaml.backup  model_bb-param_tcn-f-45-s-16.yaml.backup  model_bb-param_tcn-tf-45-l-16.yaml.backup  model_bb-param_tcn-ttf-45-s-16.yaml.backup  model_bb-param_tcn-tvf-45-s-16.yaml.backup  model_bb-tbptt-param_lstm-96.yaml.backup  model_bb-tbptt-param_lstm-tvc-32.yaml.backup  model_bb-tbptt-param_lstm-tvc-96.yaml.backup  model_bb-tbptt_lstm-tvc-32.yaml.backup  model_bb-tbptt_lstm-tvc-96.yaml.backup  model_bb_gcn-250-l-16.yaml.backup  model_bb_gcn-250-s-16.yaml.backup  model_bb_gcn-tf-250-l-16.yaml.backup  model_bb_gcn-tf-250-s-16.yaml.backup  model_bb_gcn-tf-2500-s-16.yaml.backup  model_bb_gcn-tf-45-s-16.yaml.backup  model_bb_lstm-32.yaml.backup  model_bb_s4-b4-s4-c16.yaml.backup  model_bb_tcn-250-l-16.yaml.backup  model_bb_tcn-250-s-16.yaml.backup  model_bb_tcn-2500-l-16.yaml.backup  model_bb_tcn-2500-s-16.yaml.backup  model_bb_tcn-45-l-16.yaml.backup  model_bb_tcn-45-s-16.yaml.backup  model_bb_tcn-f-45-l-16.yaml.backup  model_bb_tcn-tf-250-s-16.yaml.backup  model_bb_tcn-tf-2500-l-16.yaml.backup  model_bb_tcn-tf-45-l-16.yaml.backup  model_bb_tcn-tf-45-s-16.yaml.backup  model_bb_tcn-ttf-250-s-16.yaml.backup  model_bb_tcn-ttf-2500-s-16.yaml.backup  model_bb_tcn-ttf-45-l-16.yaml.backup  model_bb_tcn-ttf-45-s-16.yaml.backup  model_bb_tcn-tvf-250-s-16.yaml.backup  (+17 more)
backups/nablafx-main/: data_backup.py  modules_backup.py  processors_old_backup.py
benchmarks/: README.md
benchmarks/analysis/: nparams_gb-comp.py
benchmarks/flops/: flops-macs-params_gb-comp.py  flops-macs-params_gb-dist-rnl.py  flops-macs-params_gb-fuzz-mlp.py  flops-macs-params_lstm.py  simple_flops_calculator.py
benchmarks/speed/: speed_cpu_gb-comp.py  speed_cpu_gb-dist-rnl.py  speed_cpu_lstm-cond.py  speed_cpu_lstm.py  speed_cpu_tcn-cond.py  speed_run_with_priority.sh
cfg-new/data/: data-param_marshall-jvm410h-ch-od1_trainval copy.yaml  data-param_multidrive-ffuzz_test.yaml  data-param_multidrive-ffuzz_trainval.yaml  data_ampeg-optocomp_test.yaml  data_ampeg-optocomp_trainval.yaml  data_arturia-revspring636preamp_trainval.yaml  data_blackstar-ht1-ch-od_test.yaml  data_electroharmonix-bigmuff_test.yaml  data_flamma-analogcomp_test.yaml  data_flamma-analogcomp_trainval.yaml  data_harleybenton-dropkick_trainval.yaml  data_harleybenton-greentint_trainval.yaml  data_harleybenton-plexicon_test.yaml  data_harleybenton-plexicon_trainval.yaml  data_harleybenton-rodent_test.yaml  data_harleybenton-rodent_trainval.yaml  data_harleybenton-sillyfuzz_test.yaml  data_harleybenton-sillyfuzz_trainval.yaml  data_ibanez-ts9_test.yaml  data_klon-centaur_trainval.yaml  data_mesaboogie-markv-ch-clean_test.yaml  data_yuer-dynacompressor_test.yaml  data_yuer-dynacompressor_trainval.yaml
cfg-new/trainer/: trainer_bb-tbptt.yaml  trainer_bb.yaml  trainer_gb.yaml
cfg/data/: data_blackstar-ht1-ch-od_trainval.yaml  data_custom-fuzz-2500ms_test.yaml  data_fulltone-fulldrive2_test.yaml  data_fulltone-fulldrive2_trainval.yaml  data_harleybenton-dropkick_test.yaml  data_harleybenton-fuzzylogic_test.yaml  data_harleybenton-fuzzylogic_trainval.yaml
cfg/trainer/: trainer_bb-tbptt.yaml  trainer_bb.yaml
conf/: config.yaml
conf/data/: 1176LN-Limiter_test.yaml  1176LN-Limiter_trainval.yaml  1176_test.yaml  1176_trainval.yaml  610B-MicPreamp_test.yaml  610B-MicPreamp_trainval.yaml  610b_test.yaml  610b_trainval.yaml  6176_pre_test.yaml  6176_pre_trainval.yaml  data-param_marshall-jvm410h-ch-od1_test.yaml  data-param_marshall-jvm410h-ch-od1_trainval.yaml  (+42 more)
examples/: MIGRATION_GUIDE.md  SPLIT_CALLBACKS_GUIDE.md  UTILS_REORGANIZATION.md  callback_system_config.yaml  complete_callback_config.yaml  flexible_loss_configs.yaml  migration_guide.yaml  simplified_systems.py  split_parameter_callbacks_config.yaml  test_callback_system.py  test_integration.py
nablafx/: __init__.py  __main__.py  _logger_utils.py  _npp_preload.py  _rational_patch.py  _resolvers.py  controllers.py  data.py  gcn.py  interfaces.py  loss.py  lstm.py  models.py  modules.py  plotting.py  rationals_config.json  s4.py  siren.py  system.py  tcn.py
native/clap/: CMakeLists.txt  build.sh
native/clap/cmake/: build_config.cmake.in
native/clap/src/: composite_meta.cpp  composite_meta.hpp  lufs_leveler.hpp  meta.cpp  meta.hpp  tone_plugin.cpp
native/clap/tests/: test_composite_meta.cpp
scripts/: add_type_hints_datasets.py  build_package.sh  build_tone_mac.sh  convert_configs.py  convert_signaltrain_la2a.py  export_tone.py  generate_sat_dataset.py  main.py  migrate_configs.py  migrate_loss_configs.py  migrate_to_callbacks.py  post_install.py  prepare_auto_eq_data.py  smoketest_hydra.sh  smoketest_train.py  test.sh  test_install.sh  train.py  train_bb.sh  train_gb.sh
tests/: test_rational_config.py
tests-code/: example_weighted_multi_loss_configs.yaml  test_dataset.py  test_dist.py  test_gb_model.py  test_lstm.py  test_proc_and_contr.py  test_s4.py  test_tcn.py  test_weighted_multi_loss.py
tests-models/: flops-macs-params_gb-dist-mlp.py  flops-macs-params_gb-fuzz-rnl.py  flops-macs-params_gcn.py  flops-macs-params_s4.py  flops-macs-params_tcn.py  nparams_gcn.py  nparams_lstm.py  nparams_s4.py  nparams_tcn.py  speed_cpu_gb-comp-cond.py  speed_cpu_gb-dist-mlp-cond.py  speed_cpu_gb-dist-mlp.py  speed_cpu_gb-fuzz-mlp.py  speed_cpu_gb-fuzz-rnl.py  speed_cpu_gcn-tf.py  speed_cpu_gcn.py  speed_cpu_s4-cond.py  speed_cpu_s4-tf.py  speed_cpu_s4.py  speed_cpu_tcn-tf.py  speed_cpu_tcn.py  speed_tcn.py
(+508 files in other folders)
